# jsonfizz

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  error.rs  formatter.rs  lib.rs  main.rs  path.rs  theme.rs
