[package]
name = "jsonfizz"
version = "0.2.0"
edition = "2021"
description = "🎨 Fast, zero fuss JSON formatter and pretty printer for the terminal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lance0/jsonfizz"
authors = ["Lance <lance@example.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "jsonfizz"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
owo-colors = "3.2.0"
dirs = "4.0"
toml = "0.5.9"
thiserror = "1.0.40"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.5"
predicates = "2.1"
