[package]
name = "jsonfizz"
version = "0.2.0"
edition = "2021"
description = "🎨 Fast, zero fuss JSON formatter and pretty printer for the terminal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lance0/jsonfizz"
authors = ["lance0 <lance@lance0.com>"]
keywords = ["json", "formatter", "cli", "pretty-print", "yaml", "toml", "csv", "devtools"]
categories = ["command-line-utilities", "development-tools", "encoding"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "jsonfizz"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
clap_complete = "4.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.8"
toml = "0.5.9"
csv = "1.1"
notify = "6.1"
owo-colors = "3.2.0"
indicatif = "0.17"
atty = "0.2"
dirs = "4.0"
thiserror = "1.0.40"
jsonschema = { version = "0.17", default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.5"
predicates = "2.1"
